[package]
name = "sled-bincode"
version = "0.1.0"
edition = "2021"

[dependencies]
sled = "0.34"
thiserror = "1.0"
bincode = { version = "2.0.0-rc.1", features = ["std"], default-features = false }
smallvec = { version = "1.8", features = ["union", "write"] }
serde = { version = "1.0", optional = true }

[features]
serde = ["dep:serde", "bincode/serde"]
